; ModuleID = '/home/carl/AnghaBench/linux/drivers/power/supply/extr_twl4030_madc_battery.c_twl4030_cmp.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/power/supply/extr_twl4030_madc_battery.c_twl4030_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.twl4030_madc_bat_calibration = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @twl4030_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @twl4030_cmp(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = bitcast i8* %5 to %struct.twl4030_madc_bat_calibration*
  %7 = getelementptr inbounds %struct.twl4030_madc_bat_calibration, %struct.twl4030_madc_bat_calibration* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to %struct.twl4030_madc_bat_calibration*
  %11 = getelementptr inbounds %struct.twl4030_madc_bat_calibration, %struct.twl4030_madc_bat_calibration* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = sub nsw i32 %8, %12
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
